--- a/.github/workflows/binaries.yml
+++ b/.github/workflows/binaries.yml
@@ -174,10 +174,10 @@ jobs:
         env:
           MACOSX_SDK_VERSION: 11.3
           OSX_SDK_DIR: $(xcode-select -p)/Platforms/MacOSX.platform/Developer/SDKs
-          CMAKE_OSX_SYSROOT: ${OSX_SDK_DIR}/MacOSX${{ env.MACOSX_SDK_VERSION }}.sdk
+          CMAKE_OSX_SYSROOT: ${{ env.OSX_SDK_DIR }}/MacOSX${{ env.MACOSX_SDK_VERSION }}.sdk
         run: |
           curl -L -O --connect-timeout 5 --max-time 10 --retry 5  --retry-delay 0 --retry-max-time 40 --retry-connrefused --retry-all-errors https://github.com/phracker/MacOSX-SDKs/releases/download/11.3/MacOSX${MACOSX_SDK_VERSION}.sdk.tar.xz
-          tar -xf MacOSX${MACOSX_SDK_VERSION}.sdk.tar.xz -C "$(dirname ${CMAKE_OSX_SYSROOT})"
+          tar -xf MacOSX${{ env.MACOSX_SDK_VERSION }}.sdk.tar.xz -C "$(dirname ${{ env.CMAKE_OSX_SYSROOT }})"
 
           plutil -replace MinimumSDKVersion -string ${{ env.MACOSX_SDK_VERSION }} $(xcode-select -p)/Platforms/MacOSX.platform/Info.plist
           plutil -replace DTSDKName -string macosx${{ env.MACOSX_SDK_VERSION }}internal $(xcode-select -p)/Platforms/MacOSX.platform/Info.plist
