--- a/.github/workflows/binaries.yml
+++ b/.github/workflows/binaries.yml
@@ -175,6 +175,8 @@ jobs:
           MACOSX_SDK_VERSION: 11.3
           CMAKE_OSX_SYSROOT: /Library/Developer/CommandLineTools/Platforms/MacOSX.platform/Developer/SDKs/MacOSX${{ env.MACOSX_SDK_VERSION }}.sdk
         run: |
+          echo $(xcode-select -p)
+
           curl -L -O --connect-timeout 5 --max-time 10 --retry 5  --retry-delay 0 --retry-max-time 40 --retry-connrefused --retry-all-errors https://github.com/phracker/MacOSX-SDKs/releases/download/11.3/MacOSX${MACOSX_SDK_VERSION}.sdk.tar.xz
           tar -xf MacOSX${{ env.MACOSX_SDK_VERSION }}.sdk.tar.xz -C "$(dirname ${{ env.CMAKE_OSX_SYSROOT }})"
 
