--- a/.github/workflows/binaries.yml
+++ b/.github/workflows/binaries.yml
@@ -10,12 +10,12 @@ jobs:
   build-linux-gnu:
     name: Build Linux (GNU)
     runs-on: ubuntu-latest
-    container: quay.io/pypa/manylinux2014_x86_64
+    container: openturns/manylinux2014_x86_64
 
     steps:
       # We use older versions of the checkout and cache actions, those work with the LIBC version of this container
       # We also can't use the setup-python action for this reason - it depends on a newer LIBC
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
       - uses: actions/cache@v3
         with:
